# clean-code

./: .coveragerc  .gitattributes  .gitignore  .stickler.yml  .travis.yml  Contributing.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dev-requirements.txt  setup.cfg  setup.py
docs/: conf.py  development.rst  index.rst  reading_list.rst  reading_list_template.rst  scientific_computing.rst
docs/_templates/: layout.html
docs/reading/: clean_code_robert_martin.yml  django_getting_started.yml  good_enough_practices_in_scientific_computing_wilson_et_al.yml  machine_learning_for_time_series_data_in_python_brett_naul.yml  refactoring_martin_fowler.yml
docs/text-editors/: text-editors.rst
docs/text-editors/SublimeText/: SublimeText.rst
docs/version-control/: version-control.rst
docs/version-control/Git/: Git.rst
reading/: reading_list.md
software-tips-and-tricks/build-automation-tools/SCons/: Scons.md
software-tips-and-tricks/build-automation-tools/make/: Makefile  make.md
software-tips-and-tricks/build-automation-tools/nbflow/: nbflow.md
software-tips-and-tricks/continuous-integration/GitLab/: GitLab-ci.md
software-tips-and-tricks/document-preparation/latex/: latex.md
software-tips-and-tricks/environments/: python.md
software-tips-and-tricks/reference-management-software/Zotero/: Zotero.md
software-tips-and-tricks/terminals/bash/: bash.md
software-tips-and-tricks/text-editors/SublimeText/: SublimeText.md
src/clean_code/: __init__.py  _version.py  compile_reading_list.py
tests/: test_compile_reading_list.py
(+2 files in other folders)
